--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "stripe/stripe-php": "^7.114"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
